--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -15,6 +15,20 @@ html {
     display: none;
 }
 
+.about {
+    word-wrap: break-word;
+    white-space: pre-line;
+    text-align: justify;
+    line-height: 2.6;
+    word-spacing: 1px;
+    font-size: 1.2em;
+}
+
+.about::first-letter {
+    font-size: 2.3em;
+    color: var(--pg-color);
+}
+
 body {
     background: #EDE574;
     /* fallback for old browsers */
@@ -31,7 +45,7 @@ body {
     --tri-color: #FFFFFF;
 }
 
-header {
+header, .aboutmain {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -82,8 +96,8 @@ main {
     padding: 1%;
     height: 82vh;
 }
-.autocomplete
-{
+
+.autocomplete {
     width: 100%;
 }
 
@@ -102,6 +116,7 @@ main section {
     padding: 1%;
 
 }
+
 
 .createform {
 
