--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -362,5 +362,12 @@ th, td {
     .table, .supportform {
         overflow: scroll;
     }
+    .aboutmain
+    {
+        margin-top: 50%;
+    }
+    .aboutposter {
+       display: none;
+    }
 
 }
